fixed newsletter box uneveness

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -87,4 +87,8 @@
   .social-container {
     margin: 1rem;
   }
+
+  .newsletter-container {
+    margin-left: 2.5rem;
+  }
 }
